--- a/snippets/home-snippet.html
+++ b/snippets/home-snippet.html
@@ -14,7 +14,7 @@
       <div class="col-md-4 col-sm-12 col-xs-12">
         <a href="https://www.google.com/maps/d/edit?mid=1jENgzjgLHDVthhTOFaqCue7Vllw&msa=0&ll=22.701385633432434%2C90.36143240883334&z=19" target="_blank">
           <div id="map-tile">
-            <iframe src=https://www.google.com/maps/d/edit?mid=1jENgzjgLHDVthhTOFaqCue7Vllw&msa=0&ll=22.701385633432434%2C90.36143240883334&z=19 width="100%" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
+            <iframe src="https://www.google.com/maps/d/edit?mid=1jENgzjgLHDVthhTOFaqCue7Vllw&msa=0&ll=22.701385633432434%2C90.36143240883334&z=19 width="100%" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
             <span>map</span>
           </div>
         </a>
