--- a/snippets/home-snippet.html
+++ b/snippets/home-snippet.html
@@ -11,12 +11,12 @@
           <div id="specials-tile"><span>specials</span></div>
         </a>
       </div>
-      <div class="col-md-4 col-sm-12 col-xs-12">
+<!--       <div class="col-md-4 col-sm-12 col-xs-12">
         <a href="https://www.google.com/maps/place/%E0%A6%AC%E0%A6%B0%E0%A6%BF%E0%A6%B6%E0%A6%BE%E0%A6%B2/data=!4m2!3m1!1s0x37553407fbece487:0x5d069b9599d4414a?sa=X&ved=2ahUKEwjcrPn40uDxAhUx6nMBHUG9BWkQ8gEwAHoECAUQAQ" target="_blank">
           <div id="map-tile">
             <iframe src="https://www.google.com/maps/place/%E0%A6%AC%E0%A6%B0%E0%A6%BF%E0%A6%B6%E0%A6%BE%E0%A6%B2/data=!4m2!3m1!1s0x37553407fbece487:0x5d069b9599d4414a?sa=X&ved=2ahUKEwjcrPn40uDxAhUx6nMBHUG9BWkQ8gEwAHoECAUQAQ width="100%" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
             <span>map</span>
-          </div>
+          </div> -->
         </a>
       </div>
     </div><!-- End of #home-tiles -->
